unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>NoOfContacts__c</fullName>
        <label>NoOfContacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>helloexternalId__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>helloexternalId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>helloextid__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>helloextid__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>helloworld__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>helloworld__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infoEx_Id__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>infoEx_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>gg</fullName>
        <active>true</active>
        <label>gg</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>